--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "generate-api": "orval --config ./orval.config.ts"
+    "generate-api": "orval --config ./orval.config.ts",
+    "generate-hooks": "node scripts/generate-hooks.mjs",
+    "generate": "npm run generate-api && npm run generate-hooks"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
