--- a/components.json
+++ b/components.json
@@ -11,6 +11,8 @@
     "prefix": ""
   },
   "iconLibrary": "lucide",
+  "menuColor": "default",
+  "menuAccent": "subtle",
   "aliases": {
     "components": "@/components",
     "utils": "@/components/ui/utils",
@@ -18,7 +20,7 @@
     "lib": "@/components/ui",
     "hooks": "@/hooks"
   },
-  "menuColor": "default",
-  "menuAccent": "subtle",
-  "registries": {}
+  "registries": {
+    "@retroui": "https://retroui.dev/r/{name}.json"
+  }
 }
