--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dayjs": "^1.11.19",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
