--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "cmdk": "^1.1.1",
     "dayjs": "^1.11.19",
     "embla-carousel-react": "^8.6.0",
+    "graphql": "^16.12.0",
+    "graphql-request": "^7.4.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
